# online-traffic-sim

./: CMakeLists.txt  Node.java  Nodes.json  Parse.java  README.md  Way.java  Ways.json  _release_emcc_powershell.bat  _release_emcc_windows_terminal.bat  data.py  index.html  main.cpp  main.css  main.h  main.js  main.wasm  map.osm  maryland_ways.json  test.json  vertices.json  ways.json
data/: data.py  map.osm  nodes.json  ways.json
